--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <!-- Image -->
       <div class="md:w-1/2">
             <img
-        src="C:\Users\QAIS\Desktop\donationsite\Not needed\image4.png"
+        src="C:\Users\QAIS\Desktop\mosque donation\image4.png"
         alt="Mosque Design"
         class="w-[300px] md:w-[400px] lg:w-[500px] h-auto mx-auto rounded-lg shadow-lg"
 />
